[tool.poetry]
name = "hashed"
version = "0.1.0"
description = ""
authors = ["Talyson Leocadio <talyson.rafael.leocadio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
