[tool.poetry]
name = "hashed"
version = "0.1.0"
description = ""
authors = ["Talyson Leocadio <talyson.rafael.leocadio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
requests_oauthlib = "^1.3.0"
python-dotenv = "^0.12.0"
click = "^7.1.1"

[tool.poetry.dev-dependencies]
coverage = "^5.0.3"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
